--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -7,6 +7,8 @@
 	--red-text-color: #be0202;
 	--background-color: #141e30;
 	--background-second-color: #243b55;
+	--tigress-pirate-color: #be0202;
+	--tigress-escape-color: #f6f5e9;
 }
 * {
 	margin: 0;
@@ -183,14 +185,14 @@ button:hover {
 .alert {
 	font-weight: 600;
 	color: var(--red-text-color);
-	font-size: 130%;
+	font-size: 150%;
 	padding-bottom: 10%;
 }
 /* ! FIN NAVBAR ! */
 
 /* TODO Form */
 .form-content {
-	width: 400px;
+	width: 500px;
 }
 .form-content * {
 	overflow: visible;
@@ -403,40 +405,37 @@ button:hover {
 	border-radius: 0;
 	box-shadow: none;
 }
-/* ? Right panel */
-.right-panel * {
-	font-size: 15px;
-}
-.right-panel h2 {
-	font-size: 22px;
-	margin: 15px 0px;
-	font-weight: 700;
-}
-#scoreboard {
-	padding: 10px 0px;
-	margin-bottom: 20px;
-}
-#scoreboard p {
-	font-size: 18px;
-	margin: 5px;
-}
-#message-box{
-	height: 100%;
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-}
-#message-box input{
-	width: 80%;
-	margin: auto;
-	margin-bottom: 1vh;
-}
-#message-box ul{
-	overflow: scroll;
-}
 /* TODO Affichage des cartes */
 .card {
 	border-radius: 8px;
 	border: 0.5px solid black;
+}
+.tigress-choice {
+	z-index: 999;
+	background-color: #ffffff6a;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	width: 100%;
+	height: calc(100vh - 50px);
+}
+.big-card {
+	border-radius: 30px;
+	border: 1px solid black;
+	height: 50vh;
+	margin: 15vh 6vw;
+}
+.big-card:hover {
+	height: 52vh;
+	margin: 14vh calc(6.2vw - 1vh);
+}
+.big-card.pirate:hover {
+	box-shadow: 0 0 5px var(--tigress-pirate-color), 0 0 25px var(--tigress-pirate-color), 0 0 50px var(--tigress-pirate-color);
+}
+.big-card.escape:hover {
+	box-shadow: 0 0 5px var(--tigress-escape-color), 0 0 25px var(--tigress-escape-color), 0 0 50px var(--tigress-escape-color);
 }
 .player-card {
 	height: max(11vh, 80px); 
@@ -444,7 +443,9 @@ button:hover {
     transform-origin: center;
 	margin: 0;
 	padding: 0;
-	animation: tiltOne ease 1s;
+}
+.player-card.overlap {
+	margin-left: -55px;
 }
 .player-hand {
 	position: absolute;
@@ -487,4 +488,34 @@ button:hover {
 	left: 0;
 	right: 0;
 	display: block;
+}
+/* ? Right panel */
+.right-panel * {
+	font-size: 15px;
+}
+.right-panel h2 {
+	font-size: 22px;
+	margin: 15px 0px;
+	font-weight: 700;
+}
+#scoreboard {
+	padding: 10px 0px;
+	margin-bottom: 20px;
+}
+#scoreboard p {
+	font-size: 18px;
+	margin: 5px;
+}
+#message-box{
+	height: 100%;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+}
+#message-box input{
+	width: 80%;
+	margin: auto;
+	margin-bottom: 1vh;
+}
+#message-box ul{
+	overflow: scroll;
 }
