Revert "Changing WS for localhost (test)"
This reverts commit af39ba312f49bfaf8a4bb3ae41842bc48716d852.

--- a/myapp/templates/myapp/game.html
+++ b/myapp/templates/myapp/game.html
@@ -11,7 +11,7 @@
     const room_id = parts[2]
 
     var socket = new ReconnectingWebSocket(
-        'ws://localhost:8001/ws/game_updates/'
+        `ws://${window.location.host}:8001/ws/game_updates/`
     );
     socket.onmessage = function (event) {
         const data = JSON.parse(event.data);
