Best WS without reload for each action

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -10,6 +10,7 @@
 		<link rel="shortcut icon" href="{% static 'myapp/images/logo.png' %}" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&family=Madimi+One&family=Roboto+Slab:wght@100..900&display=swap"
 			rel="stylesheet"
