--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -367,9 +367,10 @@ button:hover {
 }
 .turn-alert {
 	position: absolute;
-	top: 0;
-	margin: 30px;
-	z-index: 11;
+	bottom: 0;
+	padding: 0;
+	margin: 0;
+	z-index: 1;
 	right: 0;
 	left: 0;
 	width: 100%;
@@ -437,6 +438,7 @@ button:hover {
 }
 #hierarchie-memo {
 	position: absolute;
+	z-index: 99;
 	height: 90%;
 	left: 0;
 }
@@ -484,7 +486,7 @@ button:hover {
 	padding: 0;
 }
 .player-card.overlap {
-	margin-left: -55px;
+	margin-left: calc(max(11vh, 80px) * -125/200);
 }
 .player-hand {
 	position: absolute;
