--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -1,5 +1,3 @@
-<!-- myapp/templates/myapp/base.html -->
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="fr">
@@ -7,75 +5,58 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Skullking</title>
-		<link rel="shortcut icon" href="{% static 'myapp/images/logo.png' %}" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&family=Madimi+One&family=Roboto+Slab:wght@100..900&display=swap"
-			rel="stylesheet"
+			rel="shortcut icon"
+			href="{% static 'myapp/images/text-logo.png' %}"
 		/>
 		<link
 			rel="stylesheet"
 			type="text/css"
-			href="{% static 'myapp/style.css' %}"
+			href="{% static 'myapp/test-style.css' %}"
 		/>
 	</head>
 	<body>
-		<!-- navbar -->
-		<nav class="navbar">
-			<div class="navbar-left">
-				<a id="navbar-home" href="{% url 'home' %}">
-					<img
-						id="brand"
-						src="{% static 'myapp/images/logo.png' %}"
-						alt="skullking logo"
-						width="42"
-						height="42"
-					/>
-					<p>Skullking</p>
-				</a>
+		<div id="navbar">
+			<div id="navbar-left" class="navbar-element navbar-element-extremity">
 				<a
-					id="rules"
+					id="navbar-github-link"
+					class="navbar-link"
+					href="https://github.com/Sydnec/skullking"
+					target="_blank"
+					>Github</a
+				>
+				<a
+					id="navbar-rules-link"
+					class="navbar-link"
 					href="https://www.play-in.com/pdf/rules_games/skull_king_regles_fr.pdf"
 					target="_blank"
 					>Rules</a
 				>
 			</div>
-			<div class="navbar-right">
-				<!-- show registration only if user is not yet authenticated -->
+			<div id="navbar-center" class="navbar-element">
+				<a id="navbar-home-link" href="{% url 'home' %}">
+					<img
+						id="navbar-home-logo"
+						src="{% static 'myapp/images/text-logo.png' %}"
+						alt="skullking logo"
+					/>
+				</a>
+			</div>
+			<div id="navbar-right" class="navbar-element navbar-element-extremity">
+				<!-- show registration & login only if user is not yet authenticated -->
 				{% if not user.is_authenticated %}
-				<ul class="navbar-nav">
-					<li class="active">
-						<a id="register-button" href="{% url 'register' %}">
-							Registration
-						</a>
-					</li>
-				</ul>
-				{% endif %}
-				<!-- show login only if user is not yet authenticated -->
-				{% if not user.is_authenticated %}
-				<ul class="navbar-nav">
-					<li class="active">
-						<a id="login-button" href="{% url 'login' %}">Login</a>
-					</li>
-				</ul>
-				{% endif %}
-				<!-- show sign out only if user is authenticated -->
-				{% if user.is_authenticated %}
-				<p class="account-infos">Logged as {{ user.username }}</p>
-				<ul class="navbar-nav">
-					<li class="active">
-						<a id="signout-button" href="{% url 'logout' %}"
-							>Sign Out</a
-						>
-					</li>
-				</ul>
+                    <a id="login-button" class="navbar-link" href="{% url 'login' %}">Login</a>
+					<a id="register-button" class="navbar-link" href="{% url 'register' %}">
+                        Register
+                    </a>
+				{% else %}
+				    <!-- show sign out only if user is authenticated -->
+                    <a id="signout-button" class="navbar-link" href="{% url 'logout' %}">Sign Out</a>
 				{% endif %}
 			</div>
-		</nav>
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
-		<div id="content">{% block content %}{% endblock %}</div>
+		</div>
+		<div id="content">
+			{% block content %}{% endblock %}
+		</div>
 	</body>
 </html>
